objects/productt__c.object
<CustomObject>
    <fields>
        <fullName>approval_status__c</fullName>
        <label>approval status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>brands__c</fullName>
        <label>brands</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>adidas</fullName>
                </value>
                <value>
                    <fullName>nike</fullName>
                </value>
                <value>
                    <fullName>puma</fullName>
                </value>
                <value>
                    <fullName>woodland</fullName>
                </value>
                <value>
                    <fullName>phillips</fullName>
                </value>
                <value>
                    <fullName>bajaj</fullName>
                </value>
                <value>
                    <fullName>havells</fullName>
                </value>
                <value>
                    <fullName>zara</fullName>
                </value>
                <value>
                    <fullName>gucci</fullName>
                </value>
                <value>
                    <fullName>prada</fullName>
                </value>
                <value>
                    <fullName>samsung</fullName>
                </value>
                <value>
                    <fullName>oppo</fullName>
                </value>
                <value>
                    <fullName>redmi</fullName>
                </value>
                <value>
                    <fullName>apple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>shoes</fullName>
                </value>
                <value>
                    <fullName>appliances</fullName>
                </value>
                <value>
                    <fullName>apparal</fullName>
                </value>
                <value>
                    <fullName>electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cost__c</fullName>
        <label>cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>models__c</fullName>
        <label>models</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>brands__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>adidas-1</fullName>
                </value>
                <value>
                    <fullName>adidas-2</fullName>
                </value>
                <value>
                    <fullName>nike-1</fullName>
                </value>
                <value>
                    <fullName>nike-2</fullName>
                </value>
                <value>
                    <fullName>puma-1</fullName>
                </value>
                <value>
                    <fullName>puma-2</fullName>
                </value>
                <value>
                    <fullName>woodland-1</fullName>
                </value>
                <value>
                    <fullName>woodland-2</fullName>
                </value>
                <value>
                    <fullName>phillips-1</fullName>
                </value>
                <value>
                    <fullName>phillips-2</fullName>
                </value>
                <value>
                    <fullName>bajaj-1</fullName>
                </value>
                <value>
                    <fullName>bajaj-2</fullName>
                </value>
                <value>
                    <fullName>havells-1</fullName>
                </value>
                <value>
                    <fullName>havells-2</fullName>
                </value>
                <value>
                    <fullName>zara-1</fullName>
                </value>
                <value>
                    <fullName>zara-2</fullName>
                </value>
                <value>
                    <fullName>gucci-1</fullName>
                </value>
                <value>
                    <fullName>gucci-2</fullName>
                </value>
                <value>
                    <fullName>prada-1</fullName>
                </value>
                <value>
                    <fullName>prada-2</fullName>
                </value>
                <value>
                    <fullName>samsung-1</fullName>
                </value>
                <value>
                    <fullName>samsung-2</fullName>
                </value>
                <value>
                    <fullName>oppo-1</fullName>
                </value>
                <value>
                    <fullName>oppo-2</fullName>
                </value>
                <value>
                    <fullName>redmi-1</fullName>
                </value>
                <value>
                    <fullName>redmi-2</fullName>
                </value>
                <value>
                    <fullName>apple-1</fullName>
                </value>
                <value>
                    <fullName>apple-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>productt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>product_management_productt</fullName>
        <filterScope>Queue</filterScope>
        <label>product management</label>
        <queue>product_management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>productt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>productts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invalid_amount</fullName>
        <active>true</active>
        <errorConditionFormula>cost__c  &lt; 0</errorConditionFormula>
        <errorMessage>invalid amount</errorMessage>
    </validationRules>
</CustomObject>